--- a/styles/index.css
+++ b/styles/index.css
@@ -4,3 +4,22 @@
     padding: 0;
 }
 
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+section {
+    display: grid;
+    grid-template-columns: repeat(4, 8rem);
+    grid-template-rows: repeat(4, 8rem);
+}
+
+.face, 
+.back {
+    width: 100%;
+    height: 100%;
+}
