--- a/styles/index.css
+++ b/styles/index.css
@@ -13,6 +13,17 @@ body {
     flex-direction: column;
 }
 
+.page-title {
+    background-color: #ab917e;
+    color: rgb(250, 241, 224);
+    padding: 16px;
+    margin-bottom: 20px;
+    border-radius: 15px ;
+    border: 2px solid #e1c7b5;
+    box-shadow:  rgba(0, 0, 0, 0.2) 2px 8px 15px;
+    text-shadow: 2px 4px 6px rgba(0, 0, 0, 0.3);
+}
+
 section {
     display: grid;
     grid-template-columns: repeat(4, 8rem);
